.kube/rendertron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rendertron-deployment
  labels:
    app: rendertron
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rendertron
  template:
    metadata:
      labels:
        app: rendertron
    spec:
      containers:
      - name: rendertron
        image: rendertron:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "1000m"
          limits:
            memory: "1Gi"
            cpu: "2000m"
