.kube/rendertron-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rendertron
  labels:
    app: rendertron
spec:
  selector:
    app: rendertron
  ports:
  - port: 80
    name: http
    targetPort: 3000
