.kube/rendertron-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rendertron-ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 172.17.0.0/16
spec:
  defaultBackend:
    service:
      name: rendertron
      port:
        number: 80
